--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -13,6 +13,7 @@
     font-weight: 700;
     text-transform: uppercase;
     transition: $transition;
+    display: inline;
 
     &:hover {
         background: darken($color-success, 5%);
@@ -33,4 +34,8 @@
             color: darken($color-light, 20%);
         }
     }
+}
+
+.row {
+    display: inline;
 }
